--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div>
                 <a href="#">
                     <picture>
-                        <img src="/images/Logo.png" alt="logo">
+                        <img src="./images/Logo.png" alt="logo">
                     </picture>
                 </a>
             </div>
@@ -217,8 +217,42 @@
     </section>
     <!--================ brand Part End Here ===================-->
 
-    <!--================ Header Part Start Here ===================-->
-    <!--================ Header Part End Here ===================-->
+    <!--================ Blog Part Start Here ===================-->
+    <section class="bg-about-bg py-[110px]">
+        <div class="mx-auto max-w-container">
+            <div class="flex gap-x-[62px]">
+                <div class="w-[340px] h-[400px] overflow-hidden relative">
+                    <picture>
+                        <img class="w-full h-full object-cover" src="./images/blog1.jpg" alt="Blog">
+                    </picture>
+                    <div class="absolute top-0 left-0 bg-overlay-bg w-full h-full pl-[46px] pt-[75px] ">
+                        <h5 class="text-primary text-[24px] font-poppins font-bold leading-[150%] w-[250px] pb-[52px]">lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod.</h5>
+                        <a href="#" class="inline-block text-primary text-base uppercase font-poppins font-semibold leading-none bg-bottun py-[14px] px-[41px] text-center">LEARN MORE</a>
+                    </div>
+                </div>
+                <div class="w-[340px] h-[400px] overflow-hidden relative">
+                    <picture>
+                        <img class="w-full h-full object-cover" src="./images/blog2.png" alt="Blog">
+                    </picture>
+                    <div class="absolute top-0 left-0 bg-overlay-bg w-full h-full pl-[46px] pt-[75px] ">
+                        <h5 class="text-primary text-[24px] font-poppins font-bold leading-[150%] w-[250px] pb-[52px]">lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod.</h5>
+                        <a href="#" class="inline-block text-primary text-base uppercase font-poppins font-semibold leading-none bg-bottun py-[14px] px-[41px] text-center">LEARN MORE</a>
+                    </div>
+                </div>
+                <div class="w-[340px] h-[400px] overflow-hidden relative">
+                    <picture>
+                        <img class="w-full h-full object-cover" src="./images/blog3.png" alt="Blog">
+                    </picture>
+                    <div class="absolute top-0 left-0 bg-overlay-bg w-full h-full pl-[46px] pt-[75px] ">
+                        <h5 class="text-primary text-[24px] font-poppins font-bold leading-[150%] w-[250px] pb-[52px]">lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod.</h5>
+                        <a href="#" class="inline-block text-primary text-base uppercase font-poppins font-semibold leading-none bg-bottun py-[14px] px-[41px] text-center">LEARN MORE</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--================ Blog Part End Here ===================-->
+
     <!--================ Header Part Start Here ===================-->
     <!--================ Header Part End Here ===================-->
   
