--- a/index.html
+++ b/index.html
@@ -253,8 +253,124 @@
     </section>
     <!--================ Blog Part End Here ===================-->
 
-    <!--================ Header Part Start Here ===================-->
-    <!--================ Header Part End Here ===================-->
+    <!--================ Map Part Start Here ===================-->
+    <section>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14605.859591325136!2d90.43001804662138!3d23.76645399665355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c78c71227c15%3A0x9f0818437919415d!2sAftab%20Nagar%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1696738285171!5m2!1sen!2sbd" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="bg-common-bg py-[46px] border-b-2 border-[#FFB800]">
+            <div class="mx-auto max-w-container">
+                <div class="flex items-center justify-between">
+                    <div>
+                        <h4 class="text-primary text-[36px] font-poppins font-bold leading-none">Want to join as member branch in your area?</h4>
+                    </div>
+                    <div>
+                        <a href="#" class="inline-block text-primary text-base uppercase font-poppins font-semibold leading-none border-2 py-[14px] px-[31px] text-center">contact</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--================ Map Part End Here ===================-->
+
+    <!--================ footer Part Start Here ===================-->
+    <footer class="bg-footer-bg pt-[150px] pb-[176px]">
+        <div class="max-w-container mx-auto">
+            <div class="flex">
+                <div>
+                    <div>
+                        <a href="#">
+                            <picture>
+                                <img src="images/footer_logo.png" alt="logo">
+                            </picture>
+                        </a>
+                    </div>
+                    <div class="pt-[34px]">
+                        <ul class="flex flex-col gap-y-4">
+                            <li>
+                                <a href="mailto:modabbirhossen.web@gmail.com.com" class="text-primary font-poppins text-[14px] leading-none font-normal"><i class="fa-regular fa-envelope text-xl mr-[5px]"></i> modabbir@gmail.com.com</a>
+                            </li>
+                            <li>
+                                <a href="tel:+8001700964512" class="text-primary font-poppins text-[14px] leading-none font-normal"><i class="fa-solid fa-phone-volume text-xl mr-[5px]"></i> +800 17009645 (Toll free)</a>
+                            </li>
+                            <li>
+                                <a href="#" class="text-primary font-poppins text-[14px] leading-none font-normal"><i class="fa-solid fa-street-view mr-[5px] text-xl"></i> Aftabnagar, Badda, Dhaka</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flex gap-x-[19px] pt-[34px] items-center">
+                        <a href="https://www.facebook.com/ModabbirWEB" class="text-base text-primary w-[30px] h-[30px] bg-common-bg text-center rounded-[50%] leading-[30px]" target="_blank">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                        <a href="https://twitter.com/modabbirhossen" class="text-base text-primary w-[30px] h-[30px] bg-common-bg text-center rounded-[50%] leading-[30px]" target="_blank">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a href="https://www.instagram.com/modabbermasum/" class="text-base text-primary w-[30px] h-[30px] bg-common-bg text-center rounded-[50%] leading-[30px]" target="_blank">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/modabbir-hossen/" class="text-base text-primary w-[30px] h-[30px] bg-common-bg text-center rounded-[50%] leading-[30px]" target="_blank">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="ml-[200px] mt-[15px]">
+                    <h3 class="text-primary text-[16px] font-poppins font-bold leading-[150%] capitalize">Company</h3>
+                    <div class="pt-[21px]">
+                        <ul class="flex flex-col gap-y-4">
+                            <li>
+                                <a href="#" class="text-primary text-base capitalize font-poppins font-semibold leading-none">Home</a>
+                            </li>
+                            <li>
+                                <a href="#" class="text-primary text-base capitalize font-poppins font-semibold leading-none">About</a>
+                            </li>
+                            <li>
+                                <a href="#" class="text-primary text-base capitalize font-poppins font-semibold leading-none">Services</a>
+                            </li>
+                            <li>
+                                <a href="#" class="text-primary text-base capitalize font-poppins font-semibold leading-none">Gallery</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="ml-[155px] mt-[15px]">
+                    <h3 class="text-primary text-[16px] font-poppins font-bold leading-[150%] capitalize">Others</h3>
+                    <div class="pt-[21px]">
+                        <ul class="flex flex-col gap-y-4">
+                            <li>
+                                <a href="#" class="text-primary text-base capitalize font-poppins font-semibold leading-none">blog</a>
+                            </li>
+                            <li>
+                                <a href="#" class="text-primary text-base capitalize font-poppins font-semibold leading-none">Contact</a>
+                            </li>
+                            <li>
+                                <a href="#" class="text-primary text-base capitalize font-poppins font-semibold leading-none">Terms & Conditions</a>
+                            </li>
+                            <li>
+                                <a href="#" class="text-primary text-base capitalize font-poppins font-semibold leading-none">Privacy Policy</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="ml-[70px] mt-[15px]">
+                    <h3 class="text-primary text-[16px] font-poppins font-bold leading-[150%] capitalize">Certificate</h3>
+                    <div class="pt-[21px] flex gap-x-[5px]">
+                        <div class="bg-primary py-[6px] pl-[9px] pr-[12px] rounded-[4px]">
+                            <h4 class="text-[#008AD8] text-[24px] font-poppins font-bold leading-[100%] capitalize">ISO 88</h4>
+                            <p class="text-[#008AD8] text-[10px] font-poppins font-normal leading-[100%] capitalize">Environmentally Safe</p>
+                        </div>
+                        <div class="bg-primary p-[10px] rounded-[4px]">
+                            <h4 class="text-[#980077] text-[14px] font-poppins font-bold leading-none capitalize">Liquid<span class="text-[#009818] capitalize">Green</span></h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <section class="bg-head-bg py-[42px]">
+        <div class="mx-auto max-w-container">
+            <p class="text-pera text-[16px] font-poppins font-medium leading-none">© Copyright 2022 by AltDesain Studio – All right reserved.</p>
+        </div>
+    </section>
+    <!--================ footer Part End Here ===================-->
   
 
     <!-- js all link -->
